# njuskalo_scraper

./: .gitignore  .isort.cfg  LICENSE  Pipfile  README.md  njuskalo_scraper.py  pyproject.toml  requirements.txt  run_add_user.sh  run_script_local.sh  search_config.json  utils.py
.github/workflows/: scrape_njuskalo.yml
source/: add_user.py  njuskalo_scraper.py  s3_utilis.py  summarize_cars.py  utils.py
source/email_template/: daily_summarize.html
source/sqlalchemy_database/: __init__.py  car_brand.py  car_detail.py  user.py
source/sqlalchemy_database/common/: base.py
sqlalchemy_database/: car_brand.py  car_detail.py
sqlalchemy_database/common/: base.py
