[project]
name = "njuskalo-scraper"
description = "Scraping cars data from njuskal and sending email onw a day."
# dynamic = ["version"]
version = "1.0.0"
readme = "README.md"
authors = [
    {name = "Gabriel Saganić", email = "gabriel.saganic@gmail.com"}
]
maintainers = [
    {name = "Gabriel Saganić", email = "gabriel.saganic@gmail.com"}
]
requires-python = ">=3.9"
dependencies=[
    "requests",
    "beautifulsoup4",
    "sqlalchemy",
    "pandas",
    "boto3==1.34.38",
]
keywords = ["cars", "price", "price-tracker", "email"]

[tool.setuptools.packages.find]
include = [
    "source",
    "source.sqlalchemy_database",
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"